--- a/src/main/resources/fxml/Login/Login.fxml
+++ b/src/main/resources/fxml/Login/Login.fxml
@@ -2,39 +2,62 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0"
-            prefWidth="768.0" styleClass="login" stylesheets="@../../styles/Login/Login.css"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" styleClass="login" stylesheets="@../../styles/Login/Login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <VBox prefHeight="567.0" prefWidth="210.0" styleClass="login_image" stylesheets="@../../styles/Login/Login.css">
-        <FontAwesomeIconView glyphName="BOOK" size="35"/>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT"/>
+        <FontAwesomeIconView glyphName="BOOK" size="35" />
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <VBox fx:id="login_form1" layoutX="269.0" layoutY="30.0" prefHeight="506.0" prefWidth="390.0"
-          styleClass="login_form" stylesheets="@../../styles/Login/Login.css">
-        <Text stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" text="LOGIN PAGE" textAlignment="CENTER"
-              wrappingWidth="390.9963779449463">
+    <VBox fx:id="login_form1" layoutX="264.0" layoutY="24.0" prefHeight="506.0" prefWidth="390.0" styleClass="login_form" stylesheets="@../../styles/Login/Login.css">
+        <Text stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" text="LOGIN PAGE" textAlignment="CENTER" wrappingWidth="390.9963779449463">
             <font>
-                <Font name="System Bold Italic" size="20.0"/>
+                <Font name="System Bold Italic" size="20.0" />
             </font>
         </Text>
-        <Label prefHeight="30.0" prefWidth="389.0" text="Username, or email address:"/>
-        <TextField/>
-        <Label prefHeight="30.0" prefWidth="389.0" text="Password:"/>
-        <PasswordField/>
-        <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="102.0" styleClass="submit_button" text="Button"
-                textAlignment="CENTER">
+        <Label prefHeight="30.0" prefWidth="389.0" text="Username, or email address:">
+         <graphic>
+            <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/username-label.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+        <TextField />
+        <Label prefHeight="30.0" prefWidth="389.0" text="Password:">
+         <graphic>
+            <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/key-label.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+        <PasswordField />
+        <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
             <font>
-                <Font size="15.0"/>
+                <Font size="15.0" />
             </font>
         </Button>
-        <Text fill="#ea1d1d" strokeType="OUTSIDE" strokeWidth="0.0" text="Error:"/>
+        <Text fill="#ea1d1d" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="login" text="Error:" wrappingWidth="34.55417823791504">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account?">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
+      <Hyperlink text="Sign in">
+         <font>
+            <Font size="15.0" />
+         </font></Hyperlink>
     </VBox>
 </AnchorPane>
