--- a/src/main/resources/styles/Login/Login.css
+++ b/src/main/resources/styles/Login/Login.css
@@ -43,7 +43,7 @@
     -fx-border-style: 2px solid transparent;
     -fx-animated: inherit;
     -fx-font-size: 1.0em;
-    -fx-padding: 0.4em 0 0.4em 1em;
+    -fx-padding: 0.8em 0.5em 0.8em 1em;
 }
 
 .login_form PasswordField {
@@ -52,7 +52,7 @@
     -fx-border-style: 2px solid transparent;
     -fx-animated: inherit;
     -fx-font-size: 1.0em;
-    -fx-padding: 0.4em 0 0.4em 1em;
+    -fx-padding: 0.8em 0.5em 0.8em 1em;
 }
 
 .login_form .submit_button {
@@ -71,6 +71,15 @@
 
 }
 .login_form HyperLink {
-    -fx-text-fill: 
+    -fx-font-size: 1.2em;
+    -fx-text-fill: #3B82F6;
+}
+.login_form HyperLink:hover {
+    -fx-background-color: transparent;
+    -fx-text-fill: #3B82F6;
+    -fx-border-style: none;
+    -fx-cursor: pointer;
+    -fx-border-radius: 1.5em;
+    -fx-font-size: 1.2em;
 }
 
