--- a/src/main/resources/fxml/Login/Login.fxml
+++ b/src/main/resources/fxml/Login/Login.fxml
@@ -18,46 +18,64 @@
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <VBox fx:id="login_form1" layoutX="264.0" layoutY="24.0" prefHeight="506.0" prefWidth="390.0" styleClass="login_form" stylesheets="@../../styles/Login/Login.css">
-        <Text stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" text="LOGIN PAGE" textAlignment="CENTER" wrappingWidth="390.9963779449463">
+   <AnchorPane layoutX="244.0" layoutY="37.0" prefHeight="506.0" prefWidth="493.0" styleClass="login_form" stylesheets="@../../styles/Login/Login.css">
+      <children>
+           <Text layoutX="179.0" layoutY="47.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" text="LOGIN PAGE" textAlignment="CENTER" wrappingWidth="138.99631690979004">
+               <font>
+                   <Font name="System Bold Italic" size="20.0" />
+               </font>
+           </Text>
+           <Label layoutX="18.0" layoutY="76.0" prefHeight="30.0" prefWidth="389.0" text="Username, or email address:">
+            <graphic>
+               <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/username-label.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+         </Label>
+           <TextField layoutX="14.0" layoutY="120.0" prefHeight="42.0" prefWidth="457.0" promptText="Username, or email address..." />
+           <Label layoutX="14.0" layoutY="172.0" prefHeight="30.0" prefWidth="389.0" text="Password:">
+            <graphic>
+               <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/key-label.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+         </Label>
+           <PasswordField layoutX="17.0" layoutY="210.0" prefHeight="42.0" prefWidth="458.0" promptText="Password..." />
+           <Button layoutX="205.0" layoutY="320.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
+               <font>
+                   <Font size="15.0" />
+               </font>
+           </Button>
+           <Text fill="#ea1d1d" layoutX="232.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="login" text="Error:" wrappingWidth="34.55417823791504">
             <font>
-                <Font name="System Bold Italic" size="20.0" />
+               <Font size="14.0" />
             </font>
-        </Text>
-        <Label prefHeight="30.0" prefWidth="389.0" text="Username, or email address:">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/username-label.png" />
-               </image>
-            </ImageView>
-         </graphic></Label>
-        <TextField />
-        <Label prefHeight="30.0" prefWidth="389.0" text="Password:">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/key-label.png" />
-               </image>
-            </ImageView>
-         </graphic></Label>
-        <PasswordField />
-        <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
+         </Text>
+         <Text layoutX="24.0" layoutY="288.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account?">
             <font>
-                <Font size="15.0" />
+               <Font size="15.0" />
             </font>
-        </Button>
-        <Text fill="#ea1d1d" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="login" text="Error:" wrappingWidth="34.55417823791504">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account?">
-         <font>
-            <Font size="15.0" />
-         </font></Text>
-      <Hyperlink text="Sign in" underline="true">
-         <font>
-            <Font size="15.0" />
-         </font></Hyperlink>
-    </VBox>
+         </Text>
+         <Hyperlink fx:id="sign_in_link" layoutX="190.0" layoutY="269.0" underline="true">
+            <font>
+               <Font size="15.0" />
+            </font>
+            <graphic>
+               <Text fill="#9893df" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" underline="true" />
+            </graphic>
+         </Hyperlink>
+         <Hyperlink fx:id="forgot_password_link" layoutX="360.0" layoutY="269.0" underline="true">
+            <font>
+               <Font size="15.0" />
+            </font>
+            <graphic>
+               <Text fill="#9893df" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password?" underline="true" />
+            </graphic>
+         </Hyperlink>
+      </children>
+   </AnchorPane>
 </AnchorPane>
