Formatter file style.css in LoginController

--- a/src/main/resources/fxml/Login/ForgotPassword.fxml
+++ b/src/main/resources/fxml/Login/ForgotPassword.fxml
@@ -10,17 +10,17 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../../styles/Login/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox prefHeight="567.0" prefWidth="210.0" styleClass="login_image" stylesheets="@../../styles/Login/style.css">
+    <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../../styles/Login/style.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="forgot-password-form" stylesheets="@../../styles/Login/style.css">
+    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="page_container" stylesheets="@../../styles/Login/style.css">
       <Hyperlink layoutX="31.0" layoutY="32.0" prefHeight="32.0" prefWidth="66.0" text="&gt; Back">
          <font>
             <Font size="15.0" />
          </font>
       </Hyperlink>
-        <Text layoutX="168.0" layoutY="56.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" text="Forgot Password" textAlignment="CENTER" wrappingWidth="173.3962802886963">
+        <Text layoutX="168.0" layoutY="56.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" styleClass="text_header" text="Forgot Password" textAlignment="CENTER" wrappingWidth="173.3962802886963">
             <font>
                 <Font name="System Bold Italic" size="20.0" />
             </font>
