--- a/src/main/resources/fxml/Login/ForgotPassword.fxml
+++ b/src/main/resources/fxml/Login/ForgotPassword.fxml
@@ -30,7 +30,7 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="56.0" layoutY="159.0" prefHeight="38.0" prefWidth="398.0" />
+      <TextField layoutX="56.0" layoutY="159.0" prefHeight="38.0" prefWidth="398.0" promptText="Username..." />
       <Button layoutX="190.0" layoutY="224.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" styleClass="submit_button" text="Reset password" />
     </AnchorPane>
 </AnchorPane>
