--- a/src/main/resources/fxml/Login/Login.fxml
+++ b/src/main/resources/fxml/Login/Login.fxml
@@ -56,7 +56,7 @@
          </font>
         </Text>
         <Text layoutX="18.0" layoutY="315.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account?" />
-      <Hyperlink fx:id="sign_in_hyperlink" layoutX="148.0" layoutY="299.0" text="Sign in" />
+      <Hyperlink fx:id="sign_in_hyperlink" layoutX="148.0" layoutY="299.0" text="Sign up" />
       <Hyperlink fx:id="forgot_password_hyperlink" layoutX="362.0" layoutY="300.0" text="Forgot password?" />
     </AnchorPane>
 </AnchorPane>
