--- a/src/main/resources/fxml/UsersPage.fxml
+++ b/src/main/resources/fxml/UsersPage.fxml
@@ -3,7 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -238,7 +242,7 @@
         </VBox>
         <HBox layoutX="199.0" prefHeight="70.0" prefWidth="1022.0" spacing="15.0" styleClass="header">
             <children>
-                <Label fx:id="titlepage" alignment="CENTER" prefHeight="27.0" prefWidth="94.0" text="Users" textFill="#2b49d3">
+                <Label fx:id="titlepage" alignment="CENTER" prefHeight="27.0" prefWidth="94.0" text="Books" textFill="#2b49d3">
                     <HBox.margin>
                         <Insets left="25.0" top="20.0" />
                     </HBox.margin>
@@ -283,6 +287,46 @@
                 </Circle>
             </children>
         </HBox>
+        <VBox layoutX="199.0" layoutY="70.0" prefHeight="712.0" prefWidth="1022.0" spacing="15.0">
+            <children>
+                <Label />
+                <HBox prefHeight="31.0" prefWidth="1022.0" spacing="35.0">
+                    <children>
+                        <TextField prefHeight="32.0" prefWidth="222.0" />
+                        <MenuButton mnemonicParsing="false" prefHeight="31.0" prefWidth="73.0" text="Export">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="CSV" />
+                                <MenuItem mnemonicParsing="false" text="JSON" />
+                                <MenuItem mnemonicParsing="false" text="Excel" />
+                            </items>
+                        </MenuButton>
+                        <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="70.0" text="+ Add">
+                            <HBox.margin>
+                                <Insets left="400.0" />
+                            </HBox.margin></Button>
+                        <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="70.0" text="Drop" />
+                    </children>
+                    <VBox.margin>
+                        <Insets left="20.0" />
+                    </VBox.margin>
+                </HBox>
+                <TableView prefHeight="450.0" prefWidth="1022.0">
+                    <columns>
+                        <TableColumn prefWidth="56.0" text="STT" />
+                        <TableColumn prefWidth="80.800048828125" text="BookID" />
+                        <TableColumn prefWidth="135.199951171875" text="Title" />
+                        <TableColumn prefWidth="105.60003662109375" text="ISBN" />
+                        <TableColumn minWidth="0.0" prefWidth="145.5999755859375" text="Author" />
+                        <TableColumn minWidth="2.4000244140625" prefWidth="74.39996337890625" text="Publisher" />
+                        <TableColumn minWidth="4.00006103515625" text="YearOfPublication" />
+                        <TableColumn minWidth="0.0" prefWidth="75.199951171875" text="NumberOfPages" />
+                        <TableColumn minWidth="0.0" prefWidth="75.20001220703125" text="Quantity" />
+                        <TableColumn minWidth="0.0" prefWidth="75.2000732421875" text="ImagePath" />
+                        <TableColumn minWidth="0.0" prefWidth="75.199951171875" text="Action" />
+                    </columns>
+                </TableView>
+            </children>
+        </VBox>
     </children>
     <effect>
         <DropShadow />
