--- a/src/main/resources/fxml/LoginPage.fxml
+++ b/src/main/resources/fxml/LoginPage.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/styleLoginPage.css" type="AnchorPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.Login.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/styleLoginPage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.LoginPageController">
     <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/styleLoginPage.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
@@ -28,24 +28,20 @@
         <Label layoutX="18.0" layoutY="116.0" prefHeight="30.0" prefWidth="389.0" text="Username:">
          <graphic>
              <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                 <image>
-                     <Image url="@../images/username-label.png" />
-                 </image>
+                 <Image url="@../images/username-label.png" />
              </ImageView>
          </graphic>
         </Label>
-        <TextField layoutX="20.0" layoutY="158.0" prefHeight="42.0" prefWidth="457.0" promptText="Username..." />
+        <TextField fx:id="username_field" layoutX="20.0" layoutY="158.0" prefHeight="42.0" prefWidth="457.0" promptText="Username..." />
         <Label layoutX="18.0" layoutY="208.0" prefHeight="30.0" prefWidth="389.0" text="Password:">
          <graphic>
              <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                 <image>
-                     <Image url="@../images/key-label.png" />
-                 </image>
+                 <Image url="@../images/key-label.png" />
              </ImageView>
          </graphic>
         </Label>
-        <PasswordField layoutX="20.0" layoutY="247.0" prefHeight="42.0" prefWidth="458.0" promptText="Password..." />
-        <Button layoutX="207.0" layoutY="329.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
+        <PasswordField fx:id="password_field" layoutX="20.0" layoutY="247.0" prefHeight="42.0" prefWidth="458.0" promptText="Password..." />
+        <Button fx:id="login_button" layoutX="207.0" layoutY="329.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
             <font>
                 <Font size="15.0" />
             </font>
@@ -59,4 +55,4 @@
       <Hyperlink fx:id="sign_in_hyperlink" layoutX="148.0" layoutY="299.0" text="Sign up" />
       <Hyperlink fx:id="forgot_password_hyperlink" layoutX="362.0" layoutY="300.0" text="Forgot password?" />
     </AnchorPane>
-</fx:root>
+</AnchorPane>
