--- a/src/main/resources/fxml/AddStudentPage.fxml
+++ b/src/main/resources/fxml/AddStudentPage.fxml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.StudentPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="AnchorPane" prefHeight="584.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <AnchorPane prefHeight="584.0" prefWidth="512.0" style="-fx-background-color: #dce6e5;">
+            <children>
+                <AnchorPane layoutY="-6.0" prefHeight="84.0" prefWidth="512.0" style="-fx-background-color: #FFCF1E;">
+                    <children>
+                        <Label layoutX="182.0" layoutY="30.0" prefHeight="36.0" prefWidth="163.0" text="ADD NEW STUDENT" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="16.0" />
+                            </font>
+                        </Label>
+<!--                        <Button fx:id="backBtn" layoutX="23.0" layoutY="35.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" textFill="WHITE" />-->
+                    </children>
+                </AnchorPane>
+                <TextField fx:id="studentNameField" layoutX="224.0" layoutY="103.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student name" />
+                <TextField fx:id="studentEmailField" layoutX="224.0" layoutY="147.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student email" />
+                <TextField fx:id="studentPhoneNumberField" layoutX="224.0" layoutY="192.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student phone number" />
+                <TextField fx:id="studentAddressLineField" layoutX="224.0" layoutY="235.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student address line" />
+                <TextField fx:id="studentBirthdayField" layoutX="224.0" layoutY="287.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student Birthday" />
+                <TextField fx:id="studentSchoolField" layoutX="224.0" layoutY="331.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter student School" />
+                <Label layoutX="79.0" layoutY="106.0" prefHeight="19.0" prefWidth="40.0" text="Name">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="79.0" layoutY="150.0" prefHeight="19.0" prefWidth="34.0" text="Email">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="195.0" text="Phone Number">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="238.0" text="Address Line">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="79.0" layoutY="290.0" text="Birthday">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="334.0" text="School">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Button fx:id="addbookBtn" layoutX="244.0" layoutY="517.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #FFCF1E; -fx-background-radius: 7;" text="ADD BOOK" textFill="WHITE" />
+                <AnchorPane layoutX="-2.0" layoutY="78.0" prefHeight="7.0" prefWidth="512.0" style="-fx-background-color: white;" />
+                <Label fx:id="msgLabel" layoutX="78.0" layoutY="480.0" prefHeight="17.0" prefWidth="187.0" textFill="#b96909" />
+                <Button fx:id="backBtn" layoutX="67.0" layoutY="513.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="58.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                      <ImageView fitHeight="30.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                         <image>
+                            <Image url="@../images/logout-icon.png" />
+                         </image>
+                      </ImageView>
+                   </graphic>
+                </Button>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
